Fixed footer overlapping content

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9,9 +9,7 @@
   text-decoration: underline;
 }
 
-.bottom-fixed-footer {
-  position:absolute;
-  bottom: 0;
+.bottom-footer {
   width: 100%;
   height: 35px;
   line-height: 35px;
